[gd_scene load_steps=2 format=2]

[ext_resource path="res://TableRow.gd" type="Script" id=1]

[node name="TableRow" type="HBoxContainer"]
margin_right = 839.0
margin_bottom = 40.0
size_flags_horizontal = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColumnID" type="Label" parent="."]
margin_top = 13.0
margin_right = 277.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Test"

[node name="VSeparator" type="VSeparator" parent="."]
margin_left = 281.0
margin_right = 558.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="ColumnValue" type="LineEdit" parent="."]
margin_left = 562.0
margin_right = 839.0
margin_bottom = 40.0
size_flags_horizontal = 3
caret_blink = true
